added Matrix and added function to solve spl (cramer, gauss, gauss-jordan, and by invers)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   "files.associations": {
     "*.css": "css"
   },
-  "css.validate": false,
-  "javafx-css.validate": true
+  "css.lint.vendorPrefix": "ignore",
+  "css.lint.unknownVendorSpecificProperties": "error"
 }
