--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "css.lint.vendorPrefix": "ignore",
   "css.lint.unknownVendorSpecificProperties": "error",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.tabSize": 4
+  "editor.tabSize": 4,
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
