--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "css.lint.unknownVendorSpecificProperties": "error",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.tabSize": 4,
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.compile.nullAnalysis.mode": "automatic"
 }
